--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name=".App"
+        android:name=".PostnoteApp"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/PostnoteTheme">
